Fixed: wflow-consoleweb - List - Column link not clickable on mobile device. T1795 @8.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/css/datalist8.css
+++ b/wflow-consoleweb/src/main/webapp/css/datalist8.css
@@ -289,7 +289,8 @@ body.rtl .dataList span.pagelinks{
     text-align: center;
 }
 .dataList .rowaction_body a:not(.stretched-link),
-.dataList a.rowaction_body:not(.stretched-link) {
+.dataList a.rowaction_body:not(.stretched-link),
+.dataList .column_body a {
     z-index: 2;
     position: relative;
 }
