--- a/wflow-consoleweb/src/main/webapp/css/datalistBuilderView.css
+++ b/wflow-consoleweb/src/main/webapp/css/datalistBuilderView.css
@@ -279,7 +279,8 @@
 .filters { text-align:right; font-size:smaller }
 .filter-cell{display:inline-block;padding-left:5px;}
 .dataList .rowaction_body a:not(.stretched-link),
-.dataList a.rowaction_body:not(.stretched-link) {
+.dataList a.rowaction_body:not(.stretched-link),
+.dataList .column_body a{
     z-index: 2;
     position: relative;
 }
@@ -380,6 +381,12 @@
     border-radius: 5px;
     overflow: hidden;
     cursor: pointer;
+}
+.dataList.size_sm > form > .table-wrapper > table.responsivetable > tbody > tr > td.select_checkbox > label > i:after,
+.dataList.size_sm > form > .table-wrapper > table.responsivetable > tbody > tr > td.select_radio > label > i:after,
+.dataList.size_sm > .table-wrapper > table.responsivetable > tbody > tr > td.select_checkbox > label > i:after,
+.dataList.size_sm > .table-wrapper > table.responsivetable > tbody > tr > td.select_radio > label > i:after{
+    display: none !important;
 }
 .dataList.size_sm > form > .table-wrapper > table.responsivetable > tbody > tr > td.select_checkbox > label > :checked + i,
 .dataList.size_sm > form > .table-wrapper > table.responsivetable > tbody > tr > td.select_radio > label > :checked + i,
